More work towards something possibly usable one day
FossilOrigin-Name: 3dc3a3b2818eae0c8b3470a4142d243bd85ae526

--- a/pcsc/Makefile
+++ b/pcsc/Makefile
@@ -3,8 +3,7 @@ CFLAGS    += -Wall -std=gnu11 -g3 -ggdb3
 CXXFLAGS  += -Wall -std=gnu++11 -g3 -ggdb3
 CPPFLAGS  += -Isrc/include/PCSC -isystem $(BOOST_DIR)/include -Isrc -isystem $(NACL_SDK_ROOT)/include
 
-OBJS += 
-# pcsc_nacl_init.o
+OBJS += pcsc_nacl_init.o
 
 all: libpcsc.a
 
